<resources>

    <string name="app_name">Udacity Portfolio</string>
    <string name="intro_text">My Nanodegree Apps !</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="football_Scores_app">Football Scores App</string>
    <string name="library_app">Library App</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="capstone">Capstone : My Own App</string>

</resources>
