<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tv_intro_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/intro_text_Style"/>

    <Button
        android:id="@+id/btn_spotify_streamer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/button_style"
        android:text="@string/spotify_streamer"/>

    <Button
        android:id="@+id/btn_football_scores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/button_style"
        android:text="@string/football_Scores_app"/>

    <Button
        android:id="@+id/btn_library_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/button_style"
        android:text="@string/library_app"/>

    <Button
        android:id="@+id/btn_build_it_bigger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/button_style"
        android:text="@string/build_it_bigger"/>

    <Button
        android:id="@+id/btn_xyz_reader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/button_style"
        android:text="@string/xyz_reader"/>

    <Button
        android:id="@+id/btn_capstone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/capstone_button_style"
        android:text="@string/capstone"/>


</LinearLayout>
